# habitmeme-mobile

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
android-shell/: gradle.properties  settings.gradle.kts
android-shell/app/: build.gradle.kts  proguard-rules.pro
android-shell/app/src/main/: AndroidManifest.xml
android-shell/app/src/main/java/com/habitmeme/mobile/: MainActivity.kt
android-shell/app/src/main/res/layout/: activity_main.xml
android-shell/app/src/main/res/values/: strings.xml  themes.xml
backend/: __init__.py  api_routes.py  auto_engine.py  bgw_client.py  config.py  db.py  devserver.py  ledger.py  legacy_strategy.py  main.py  models.py  order_sign.py  runner.py  strategy.py  web_routes.py
backend/static/: app.js  style.css
backend/templates/: index.html
docs/: AUTO_MODE.md  DEMO_SCRIPT.md  QUOTE_RT_TEMPLATE.md  RUN_ON_ANDROID.md  SUBMISSION.md  TERMUX_SETUP.md  X_ARTICLE_FINAL.md
skills/habitmeme-auto-strategy/: SKILL.md
skills/habitmeme-mobile-strategy/: SKILL.md
skills/habitmeme-mobile-strategy/references/: current-strategy.md  runtime-boundaries.md
tests/: test_bgw_client.py  test_ledger.py  test_order_amounts.py  test_order_sign.py  test_runner.py  test_smoke.py  test_strategy.py
web/: README.md
