[project]
name = "habitmeme-mobile"
version = "0.1.0"
description = "Android local auto trading agent for Solana meme coins"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "jinja2>=3.1.0",
  "pydantic>=2.8.0,<3",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
